Bug 430176 - Crash when extending selection of filtered transactions beyond top of list
Summary: Crash when extending selection of filtered transactions beyond top of list
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.6
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-09 09:52 UTC by Guy71
Modified: 2021-01-02 11:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guy71 2020-12-09 09:52:49 UTC
SUMMARY

Kmymoney crashes when you extend the transcation selection beyond the first transaction filtered

STEPS TO REPRODUCE
1. Open kmymoney, open an account with some transactions
2. Fill the filter field to get more than one page of filtered transactions
3. Select a transaction by the end of the list
4. With the shift key pressed, press the pg-up key two or more times to virtually go beouynd the top of the list of shown transactions
5. Kmymoney go in an infinite loop that you can interrupt only by killing the app

OBSERVED RESULT

Unusable kmymoney and loss of previous actions not saved

EXPECTED RESULT

Stop the selection at the top of the list with no other consequence

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.47.0
Qt Version: 5.9.1

ADDITIONAL INFORMATION
Comment 1 Jack 2020-12-18 22:37:07 UTC
It works fine for me on Linux, so it might have been fixed in 5.1, or it might be Windows related.  Can you try a more recent version, and can anyone else using Windows confirm?
Comment 2 Bug Janitor Service 2021-01-02 04:34:11 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Thomas Baumgart 2021-01-02 08:36:10 UTC
I can duplicate it on Linux on the 5.1 branch
Comment 4 Thomas Baumgart 2021-01-02 11:42:27 UTC
Git commit 0a458e0ceed9bc0c9eb14bbfbd2e5cb5050ba673 by Thomas Baumgart.
Committed on 02/01/2021 at 11:42.
Pushed by tbaumgart into branch '5.1'.

Prevent endless loop in certain circumstances

With active filters, it could happen in the register that Shift+PgUp and
Shift+PgDn result in an endless loop leaving the application
unresponsive to user input.

This change prevents such endless loops.
FIXED-IN: 5.1.2

M  +9    -4    kmymoney/widgets/register.cpp

https://invent.kde.org/office/kmymoney/commit/0a458e0ceed9bc0c9eb14bbfbd2e5cb5050ba673