Prevent endless loop in certain circumstances

With active filters, it could happen in the register that Shift+PgUp and
Shift+PgDn result in an endless loop leaving the application
unresponsive to user input.

This change prevents such endless loops.

BUG: 430176
FIXED-IN: 5.1.2